# bkdk

./: .flake8  .gitignore  CHANGES.rst  README.rst  game.py  learn.py  neat.cfg  pyproject.toml  test_shapes.py
src/bkdk/: __init__.py  bitmap.py  board.py  evolve.py  gym.py  player.py  screenshot.py  shapes.py  tinyscreen.py
src/bkdk/envs/: __init__.py  bkdk_env.py
src/bkdk/ts/: core.py  lights.py
tests/: test_bitmap.py  test_board.py  test_env.py  test_quality.py  test_screenshot.py  test_shapes.py  test_tinyscreen.py
