[project]
name = "bkdk"
dependencies = [
    "graphviz",
    "matplotlib",
    "neat-python==0.92",
]
dynamic = ["version"]

[project.scripts]
evolve = "bkdk.evolve:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "bkdk.__version__"}
