[project]
name = "bkdk"
dependencies = [
    "gymnasium",
    "numpy",
]
dynamic = ["version"]

[project.scripts]
evolve = "bkdk.evolve:main"
profile = "bkdk.tinyscreen:profile"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.dynamic]
version = {attr = "bkdk.__version__"}
